[project]
name = "project17"
version = "0.1.0"
description = ""

readme = "README.md"

requires-python = "^3.11"
dependencies = [
    "pandas==2.2.2",
    "numpy==2.0",
    "networkx==3.4.2",
    "jupyterlab>=4.4.1,<5.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ndlib (>=5.1.1,<6.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "powerlaw (>=1.5,<2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
